[gd_scene load_steps=6 format=3 uid="uid://fdp1yjxveiu1"]

[ext_resource type="Script" path="res://WorldObjects/world_object.gd" id="1_iy54o"]
[ext_resource type="Texture2D" uid="uid://chakc7r45aot6" path="res://PlaceholderAssets/TilesetFloor.png" id="2_vbw4i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d68tq"]
size = Vector2(64, 64)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4loos"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_bxc75"]
light_mode = 1

[node name="WorldObject" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_iy54o")
display_name = "DEFAULT_OBJECT"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_vbw4i")
region_enabled = true
region_rect = Rect2(0, 128, 64, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_d68tq")

[node name="Details" type="Label" parent="."]
visible = false
z_index = 1
material = SubResource("CanvasItemMaterial_4loos")
offset_top = 32.0
offset_right = 128.0
offset_bottom = 80.0
text = "Details
Blahblahblah"

[node name="Interact" type="Label" parent="."]
visible = false
z_index = 1
material = SubResource("CanvasItemMaterial_bxc75")
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -64.0
offset_right = 96.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
text = "Press [F] to [Verb]"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
